--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
 
         <!-- Button Section -->
-        <a href="https://your-survey-link.com" class="continue-btn" id="continue-btn">Continue to the Survey</a>
+        <a href="begin.html" class="continue-btn" id="continue-btn">Continue to the Survey</a>
     </div>
 
     <script>
