--- a/begin.html
+++ b/begin.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="0; url=https://example.com/">
-<a title="" href="https://clicky.com/101466902"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<meta http-equiv="refresh" content="0; url=https://login.surveygenie.org/jvfdDhHN">
+<a title="" href="https://clicky.com/101466902"><img alt="Clicky" src="" border="0" /></a>
 <script async src="//static.getclicky.com/101466902.js"></script>
 <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101466902ns.gif" /></p></noscript>
